--- a/notebooks/2020-07-10_3brain_200faces_VAE.ipynb
+++ b/notebooks/2020-07-10_3brain_200faces_VAE.ipynb
@@ -18,7 +18,7 @@
     "import glia, os, numpy as np, pandas as pd, av, matplotlib.pyplot as plt\n",
     "from glob import glob\n",
     "# from tqdm.notebook import tqdm\n",
-    "from tqdm import tqdm"
+    "from tqdm.auto import tqdm"
    ]
   },
   {
