--- a/notebooks/2020-07-10_3brain_celltyping.ipynb
+++ b/notebooks/2020-07-10_3brain_celltyping.ipynb
@@ -57,7 +57,7 @@
     "from functools import reduce, partial\n",
     "from scipy import stats\n",
     "from pathlib import Path\n",
-    "from tqdm import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "reload(glia)\n",
     "from sklearn.decomposition import PCA\n",
