--- a/notebooks/tSNE visualization of 3Brain.ipynb
+++ b/notebooks/tSNE visualization of 3Brain.ipynb
@@ -46,7 +46,7 @@
     "from functools import reduce, partial\n",
     "from scipy import stats\n",
     "from pathlib import Path\n",
-    "from tqdm import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "reload(glia)\n",
     "from sklearn.decomposition import PCA\n",
     "from scipy.stats import vonmises\n",
